--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -185,7 +185,7 @@
                 <td class="align-center">
 
                     <i auth="crud" ng-show="!data.inheritance" class="fa fa-trash-o"
-                       ng-click="removeHakijaryhma(data.oid)"></i>
+                       ng-click="model.removeHakijaryhma(data.oid)"></i>
                 </td>
             </tr>
             </tbody>
