--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -20,7 +20,7 @@
         <option value=""></option>
     </select>
 </script>
-
+<h6>{{bigdata}}</h6>
 <!-- Valintaperuste default template -->
 <script type="text/ng-template" id="valintaperuste-default-template">
     <div class="form-item-content">
@@ -58,11 +58,15 @@
             </div>
 
             <div class="form-group">
-                <label class="col-sm-3 control-label">{{ t('laskentakaavaviiteasetuksetmodal.tunniste') || 'Tunniste' }}</label>
+                <label class="col-sm-3 s">{{ t('laskentakaavaviiteasetuksetmodal.tunniste') || 'Tunniste' }}</label>
                 <div class="col-sm-9" ng-if="valintaperusteviite.tyyppi != 'ARVOJOUKKO'">
+                    <div ng-if="valintaperuste.lahde === 'HAETTAVA_ARVO' && data.length > 0">
+                        <select ng-model="valintaperuste.tunniste" ng-options="data._id as data.messageText.translations.fi for data in data"></select>
+                    </div>
+                    <div ng-if="valintaperuste.lahde !== 'HAETTAVA_ARVO' || valintaperuste.lahde === 'HAETTAVA_ARVO' && data.length == 0">
                     <input ng-disabled="alikaavaValues.isAlikaava" type="text" ng-model="valintaperuste.tunniste"
                            required="required"/>
-
+                    </div>
                     <span ng-if="valintaperuste.lahde === 'SYOTETTAVA_ARVO'" ng-click="generateSyoteId(valintaperuste)" class="btn btn-sm btn-default">{{ t('laskentakaavaviiteasetuksetmodal.generoi') || 'Generoi tunniste' }}</span>
                 </div>
 
@@ -70,6 +74,7 @@
                     <select ng-disabled="alikaavaValues.isAlikaava" ng-model="valintaperuste.tunniste"
                             ng-options="arvo.avain as arvo.arvo for arvo in valintaperusteviite.arvojoukko | orderBy:'arvo'"></select>
                 </div>
+
             </div>
             <div class="form-group" ng-if="valintaperuste.lahde === 'SYOTETTAVA_ARVO'">
                 <label class="col-sm-3 control-label">{{ t('laskentakaavaviiteasetuksetmodal.vaatiiOsallistumisen') || 'Vaatii osallistumisen' }}</label>
