--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -58,17 +58,15 @@
 
             <div class="form-group">
                 <label class="col-sm-3 control-label">{{ t('laskentakaavaviiteasetuksetmodal.tunniste') || 'Tunniste' }}</label>
-                <!--<div class="col-sm-9" ng-if="valintaperusteviite.tyyppi != 'ARVOJOUKKO'">-->
+                <div class="col-sm-9" ng-if="valintaperusteviite.tyyppi != 'ARVOJOUKKO'">
                     <!--<div ng-if="valintaperuste.lahde === 'HAETTAVA_ARVO' && data.length > 0">-->
                         <!--<select ng-model="valintaperuste.tunniste" ng-options="data._id as data.answers for data in bigdata"></select>-->
                     <!--</div>-->
-                    <div ng-if="valintaperuste.lahde === 'HAETTAVA_ARVO' && bigdata.length > 0">
-                        <select ng-model="valintaperuste.tunniste" ng-options="data.key as data.value for data in bigdata"></select>
-                    </div>
-                    <div ng-if="valintaperuste.lahde !== 'HAETTAVA_ARVO' || valintaperuste.lahde === 'HAETTAVA_ARVO' && data.length == 0">
+                        <select ng-if="valintaperuste.lahde === 'HAETTAVA_ARVO' && bigdata.length > 0" ng-model="valintaperuste.tunniste" ng-options="data.key as data.value for data in bigdata">
+                            <option value=""></option>
+                        </select>
                     <input ng-disabled="alikaavaValues.isAlikaava" type="text" ng-model="valintaperuste.tunniste"
                            required="required"/>
-                    </div>
                     <span ng-if="valintaperuste.lahde === 'SYOTETTAVA_ARVO'" ng-click="generateSyoteId(valintaperuste)" class="btn btn-sm btn-default">{{ t('laskentakaavaviiteasetuksetmodal.generoi') || 'Generoi tunniste' }}</span>
                 </div>
 
