valintatapajonon hakijaryhmien näyttäminen korjattu

--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -98,7 +98,7 @@
                         <td><input ng-disabled="alikaavaValues.isAlikaava" type="text" size="15"
                                    ng-model="kuvaus.teksti"/></td>
                         <td>
-                            <button ng-disabled="alikaavaValues.isAlikaava"
+                            <button class="btn btn-sm btn-default" ng-disabled="alikaavaValues.isAlikaava"
                                     ng-click="removeValintaperusteviiteKuvaus($index, valintaperuste)"><i
                                     class="fa fa-trash-o"></i></button>
                         </td>
@@ -184,7 +184,7 @@
                             <td><input ng-disabled="alikaavaValues.isAlikaava" type="text" size="15"
                                        ng-model="kuvaus.teksti"/></td>
                             <td>
-                                <button ng-disabled="alikaavaValues.isAlikaava"
+                                <button class="btn btn-sm btn-default" ng-disabled="alikaavaValues.isAlikaava"
                                         ng-click="removeKonvertteriParametriKuvaus($index, parametri)"><i
                                         class="fa fa-trash-o"></i></button>
                             </td>
