OVT-8344: nimen ja kuvauksen voi muuttaa. Kaavojen tallentamiseen refaktorointia

--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/laskentakaavalomake.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/laskentakaavalomake.html
@@ -12,10 +12,10 @@
     <breadcrumb></breadcrumb>
 
     <!-- Laskentakaavapuu -->
-    <div ng-show="!showNewLaskentakaavaForm" ng-include="'laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html'"></div>
+    <div ng-show="!showNewKaava" ng-include="'laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html'"></div>
 
     <!-- Uusi laskentakaava -->
-    <div ng-show="showNewLaskentakaavaForm" ng-include="'laskentakaavat/laskentakaavaeditori/uusilaskentakaava.html'"></div>
+    <div ng-show="showNewKaava" ng-include="'laskentakaavat/laskentakaavaeditori/uusilaskentakaava.html'"></div>
 
 
 
