--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
@@ -132,6 +132,8 @@
     HAEMERKKIJONOJAKONVERTOITOTUUSARVOKSI
     HAEMERKKIJONOJAKONVERTOITOTUUSARVOKSI
     VALINTAPERUSTEYHTASUURUUS
+    YOARVOSANA
+    YOOSAKOEARVOSANA
  -->
 <script type="text/ng-template" id="haettava_arvo">
     <div class="parameter" ng-class="funktioSelection == funktiowrapper ? 'active' : ''">
