--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -59,36 +59,41 @@
                 </div>
             </div>
 
-            <div class="form-group" >
+            <div class="form-group">
                 <label class="col-sm-3 control-label">{{ t('laskentakaavaviiteasetuksetmodal.tunniste') || 'Tunniste'
                     }}</label>
                 <!--<div class="col-sm-9" ng-if="valintaperusteviite.tyyppi != 'ARVOJOUKKO'">-->
                 <!--<div ng-if="valintaperuste.lahde === 'HAETTAVA_ARVO' && data.length > 0">-->
                 <!--<select ng-model="valintaperuste.tunniste" ng-options="data._id as data.answers for data in bigdata"></select>-->
                 <!--</div>-->
-                <div class="col-sm-9" >
-                    <div ng-if="valintaperuste.lahde === 'HAETTAVA_ARVO' && bigdata.length > 0">
-                        <select ng-model="valintaperuste.tunniste"
-                                ng-options="data.key as data.value for data in bigdata"
-                                ng-disabled="alikaavaValues.isAlikaava">
-                            <option value=""></option>
-                        </select>
+                <div class="col-sm-9">
+                    <div>
+                        <p class="form-control-static">Hakulomakkeen tunniste</p>
+
+                        <div ng-if="valintaperuste.lahde === 'HAETTAVA_ARVO' && bigdata.length > 0">
+                            <select ng-model="valintaperuste.tunniste"
+                                    ng-options="data.key as data.value for data in bigdata"
+                                    ng-disabled="alikaavaValues.isAlikaava">
+                                <option value=""></option>
+                            </select>
+                        </div>
                     </div>
-                    <div ng-if="valintaperuste.lahde === 'HAETTAVA_ARVO' && lisakysymysAvaimet.length > 0">
-                        <select ng-model="valintaperuste.tunniste"
-                                ng-options="data.key as data.value for data in lisakysymysAvaimet"
-                                ng-disabled="alikaavaValues.isAlikaava">
-                            <option value=""></option>
-                        </select>
+                    <div>
+                        <p class="form-control-static">Lisäkysymyksen tunniste</p>
+                        <div ng-if="valintaperuste.lahde === 'HAETTAVA_ARVO' && lisakysymysAvaimet.length > 0">
+                            <select ng-model="valintaperuste.tunniste"
+                                    ng-options="data.key as data.value for data in lisakysymysAvaimet"
+                                    ng-disabled="alikaavaValues.isAlikaava">
+                                <option value=""></option>
+                            </select>
+                        </div>
                     </div>
-                    <div ng-if="valintaperuste.lahde === 'HAETTAVA_ARVO'">
+                    <div>
+                        <p class="form-control-static">Vapaamuotoinen tunniste</p>
                         <input ng-disabled="alikaavaValues.isAlikaava" type="text" ng-model="valintaperuste.tunniste"
                                required="required"/>
                     </div>
-                    <div ng-if="valintaperuste.lahde !== 'HAETTAVA_ARVO'">
-                        <input ng-disabled="alikaavaValues.isAlikaava" type="text" ng-model="valintaperuste.tunniste"
-                               required="required"/>
-                    </div>
+
                 <span ng-if="valintaperuste.lahde === 'SYOTETTAVA_ARVO'" ng-click="generateSyoteId(valintaperuste)"
                       class="btn btn-sm btn-default">{{ t('laskentakaavaviiteasetuksetmodal.generoi') || 'Generoi tunniste' }}</span>
                 </div>
